Display origin perks like intrinsics, fix enhanced perks not displaying, fix shaped icon repeating, fix pattern causing misalignment when sticky

--- a/style/component/inventory/Item.scss
+++ b/style/component/inventory/Item.scss
@@ -120,8 +120,10 @@
 			background: $background;
 			-webkit-mask-image: url("/image/svg/shaped.svg");
 			-webkit-mask-size: contain;
+			-webkit-mask-repeat: no-repeat;
 			mask-image: url("/image/svg/shaped.svg");
 			mask-size: contain;
+			mask-repeat: no-repeat;
 		}
 	}
 	
